<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>fx</groupId>
  <artifactId>maven</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <name>fxMaven</name>
  <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
    </properties>
    <dependencies>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>17</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.openjfx/javafx-fxml -->
		<dependency>
    		<groupId>org.openjfx</groupId>
    		<artifactId>javafx-fxml</artifactId>
    		<version>17</version>
		</dependency>
		<dependency>
			<groupId>de.codecentric.centerdevice</groupId>
			<artifactId>javafxsvg</artifactId>
			<version>1.3.0</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.apache.xmlgraphics/batik-transcoder -->
		<dependency>
    		<groupId>org.apache.xmlgraphics</groupId>
    		<artifactId>batik-transcoder</artifactId>
    		<version>1.14</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.apache.xmlgraphics/batik-dom -->
		<dependency>
    		<groupId>org.apache.xmlgraphics</groupId>
    		<artifactId>batik-dom</artifactId>
    		<version>1.9</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.controlsfx/controlsfx -->
		<dependency>
    		<groupId>org.controlsfx</groupId>
    		<artifactId>controlsfx</artifactId>
    		<version>11.1.0</version>
		</dependency>
        <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
		<dependency>
    		<groupId>mysql</groupId>
    		<artifactId>mysql-connector-java</artifactId>
    		<version>8.0.26</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.xerial/sqlite-jdbc -->
		<dependency>
    		<groupId>org.xerial</groupId>
    		<artifactId>sqlite-jdbc</artifactId>
    		<version>3.36.0.3</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/com.mchange/c3p0 -->
		<dependency>
    		<groupId>com.mchange</groupId>
    		<artifactId>c3p0</artifactId>
    		<version>0.9.5.5</version>
		</dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.0</version>
                <configuration>
                    <release>11</release>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>0.0.6</version>
                <executions>
                    <execution>
                        <!-- Default configuration for running -->
                        <!-- Usage: mvn clean javafx:run -->
                        <id>default-cli</id>
                        <configuration>
                            <mainClass>reselection.Main</mainClass>
                            <options>--add-exports</options>
                            <options>javafx.base/com.sun.javafx.event=org.controlsfx.controls</options>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
        <resources>
        	<resource>
            	<directory>src/main/java</directory>
                	<includes>
                    	<include>**/*.fxml</include>
                	</includes>
        	</resource>
    	</resources>   
    </build>
</project>
  